# auth-service

./: .dockerignore  .gitignore  .gitlab-ci.yml  .hlint.yaml  Dockerfile  Dockerfile.build  LICENSE  Makefile  README.md  SAML.md  auth-service.cabal  auth-service.config  build.env  docker-compose.dev.yml  docker-compose.yml  overview.drawio  run.sh  shell.nix
.github/workflows/: build.yaml
Doc/: API.html  API.md  Library.md
SAML/: docker-compose.yaml
auth-service-core/: ChangeLog.md  LICENSE  Makefile  auth-service-core.cabal  hie.yaml  stack.lts16.yaml  stack.lts17.yaml  stack.lts18.yaml  stack.lts22.yaml  stack.yaml
auth-service-core/openApi/: Main.hs
auth-service-core/signed-auth/: .gitignore  Makefile  README.md  hie.yaml  package.yaml  shell.nix  signed-authorization.cabal  stack.yaml
auth-service-core/src/: Compat.hs  Helpers.hs  SignedAuth.hs
auth-service-core/src/AuthService/: Api.hs  OpenAPI.hs  SignedHeaders.hs  Types.hs
auth-service-core/src/AuthService/OpenAPI/: Schema.hs
auth-service-core/src/SignedAuth/: Headers.hs  JWS.hs  Nonce.hs  Sign.hs  Util.hs
auth-service-core/test-suite/: Main.hs
auth-service-types/: ChangeLog.md  auth-service-types.cabal  stack.yaml
auth-service-types/src/: Helpers.hs
auth-service-types/src/AuthService/: Api.hs  Types.hs
client/: AuthService.hs
devel/: README.md  docker-compose.yaml
devel/templates/: README.md  password-reset-email.html.mustache  password-reset-unknown-email.html.mustache
docker-compose-example/: .gitignore  README.md  docker-compose.yaml
docker-compose-example/backend/: Dockerfile  index.js
docker-compose-example/proxy/: nginx.conf
docker/stack-deployimage/: Dockerfile
frontend/: auth-service.include  auth.html  login.html  nginx.conf  skip.html
proxy/: Dockerfile  dnsmasq.conf  nginx.conf.m4  nginx.conf.mustache  run.sh
scripts/: docker-build  registry-login
service/: .dockerignore  .gitmodules  Dockerfile  LICENSE  Makefile  auth-service-local.config  auth-service.cabal  auth-service.config  docker-compose.test.yaml  hie.yaml  package.yaml  stack.dockerhub.yaml  stack.yaml
service/app/: Main.hs
service/client/: AuthService.hs
service/docker/add/: run.sh
service/src/: Api.hs  Audit.hs  Backend.hs  Config.hs  Dev.hs  Logging.hs  Monad.hs  PasswordReset.hs  Run.hs  SAML.hs  Twilio.hs  Types.hs  User.hs  Util.hs  schema
service/src/Persist/: Migration.hs  Schema.hs  Stage.hs
service/src/Persist/migrations/: 01-initial.sql  02-ci-emails.sql  03-user-deactivation.sql  04-add-audit-log.sql  05-login-attempt.sql  06-audit-log-remove-identifying-info.sql  07-sso.sql  08-saml-request-id.sql
service/src/SAML/: AuthRequest.hs  Config.hs  Keycloak.hs  Keys.hs
service/src/html/: mui-email-inline.min.css  mui-email-styletag.min.css  password-reset-email-template.html.mustache  password-reset-unknown-email-template.html.mustache
service/test/: Test.hs
service/test/Test/: Api.hs  Common.hs
sign-in-page/: .eslintrc.json  index.js  package-lock.json  package.json  webpack.config.js
src/: Api.hs  AuthServiceTypes.hs  Backend.hs  Config.hs  Helpers.hs  Logging.hs  Main.hs  Twilio.hs  Types.hs  User.hs  schema
src/Persist/: Schema.hs  Stage.hs
tests/: test  upstream-nginx.conf
web/: Dockerfile  auth-service.include  auth-service.js  auth.html  dnsmasq.sh  nginx.conf.m4  run.sh
