name:                auth-service
version:             0.0.0.0
synopsis:            Authentication service for Nejla Reference Architecture applications
description:         Authentication service for Nejla Reference Architecture applications.
license:             BSD3
license-file:        LICENSE
maintainer:          info@nejla.com
copyright:           Nejla AB, 2016
category:            Development
build-type:          Simple
extra-source-files:  README.md, source/schema
cabal-version:       >=1.10

executable auth-service
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  other-modules:     Api
                   , AuthServiceTypes
                   , Backend
                   , Helpers
                   , Logging
                   , Persist.Schema
                   , Persist.Stage
                   , Twilio
                   , Types
                   , User
  build-depends:     aeson
                   , base >= 4 && < 5
                   , base64-bytestring >= 1.0
                   , bcrypt
                   , bytestring
                   , bytestring-conversion >= 0.3
                   , configurator
                   , either
                   , entropy >= 0.3
                   , exceptions >= 0.8
                   , esqueleto
                   , http-api-data >= 0.2
                   , http-conduit >= 2.1
                   , http-types >= 0.9
                   , lens
                   , monad-logger >= 0.3
                   , mtl >= 2.2
                   , path-pieces
                   , persistent >= 2.2
                   , persistent-postgresql >= 2.2
                   , persistent-template >= 2.1
                   , random >= 1.1
                   , servant-server >= 0.4.4
                   , text
                   , time >= 1.5
                   , uuid >= 1.3
                   , wai >= 3.0
                   , warp

library
  hs-source-dirs:    client, src
  ghc-options:       -Wall -O2
  exposed-modules:   AuthService
  other-modules:     AuthServiceTypes
                   , Helpers
  build-depends:     aeson
                   , base >= 4 && < 5
                   , bytestring
                   , bytestring-conversion >= 0.3
                   , exceptions >= 0.8
                   , http-api-data >= 0.2
                   , http-conduit >= 2.1
                   , http-types >= 0.9
                   , lens
                   , mtl >= 2.2
                   , path-pieces
                   , text
                   , time >= 1.5
                   , uuid >= 1.3
