name:                auth-service
version:             0.0.0
synopsis:            Auth service
description:         Auth service
license:             AllRightsReserved
license-file:        LICENSE
author:
maintainer:
copyright:           2015
category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  src/schema

executable auth-service
  hs-source-dirs:    app/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     base
                   , auth-service
  default-language: Haskell2010

library
  hs-source-dirs:    client, src
  ghc-options:       -Wall -O2
  exposed-modules:   Api
                   , AuthService
                   , Backend
                   , Config
                   , Logging
                   , Persist.Schema
                   , Persist.Stage
                   , Run
                   , Twilio
                   , Types
                   , User
  build-depends:     base >= 4 && < 5
                   , auth-service-types
                   , aeson
                   , base64-bytestring >= 1.0
                   , bcrypt
                   , bytestring
                   , bytestring-conversion >= 0.3
                   , configurator
                   , data-default
                   , esqueleto
                   , exceptions >= 0.8
                   , http-api-data >= 0.2
                   , http-conduit >= 2.1
                   , http-types >= 0.9
                   , lens
                   , monad-logger >= 0.3
                   , mtl >= 2.2
                   , nejla-common
                   , path-pieces
                   , persistent >= 2.2
                   , persistent-postgresql >= 2.2
                   , persistent-template >= 2.1
                   , random >= 1.1
                   , servant-server >= 0.4.4
                   , text
                   , time >= 1.5
                   , uuid >= 1.3
                   , wai >= 3.0
                   , warp
  default-language: Haskell2010

test-suite unit-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Test.hs
  other-modules:     Test.Common
  build-depends:     base
                   , QuickCheck
                   , auth-service
                   , exceptions >= 0.8
                   , hspec-expectations
                   , hspec-wai
                   , lens
                   , monad-logger >= 0.3
                   , mtl >= 2.2
                   , persistent-sqlite
                   , resource-pool
                   , tasty-hunit
                   , tasty-quickcheck
                   , tasty-th
                   , text
  ghc-options:       -Wall
  default-language: Haskell2010

test-suite api-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Test/Api.hs
  other-modules:     Test.Common
  build-depends:     base
                   , QuickCheck
                   , auth-service
                   , exceptions >= 0.8
                   , hspec
                   , hspec-expectations
                   , hspec-wai
                   , hspec-wai-json
                   , lens
                   , monad-logger >= 0.3
                   , mtl >= 2.2
                   , nejla-common
                   , persistent-sqlite
                   , resource-pool
                   , text
                   , uuid
                   , wai
                   , wai-extra
  ghc-options:       -Wall
  default-language: Haskell2010
